fluxcd/apps/base/libreddit/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: libreddit
  labels:
    routed-gateway: "true"
